--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -10,15 +10,50 @@
 
 .container > section {
 	position: absolute;
+	z-index: -1;
 	top: 100px;
 	left: 0;
 	width: 100%;
 	margin: 0 auto;
 
 	text-align: center;
-	opacity: 1;
+	opacity: 0;
 }
 
-.container > section:not(:first-child) {
+.container > section:first-child {
+  opacity: 1;
+  z-index: 1;
+}
+
+.text-container {
+	min-height: 60%;
+}
+
+.image-container {
+	width: 100%;
+	
+
+  img { max-width: 100%; }
+
+  img.current { display: inline-block; }
+}
+
+.image-displayer {
+	img { max-width: 100%; }
+	&:first-child { display: block; }
+}
+
+
+.image-hidden {
   opacity: 0;
+}
+
+#avatar {
+	display: block;
+	width: 150px;
+	height: 150px;
+
+	border-radius: 50%;
+
+	box-shadow: 0 1px 5px rgba(50,50,50, .6);
 }
