--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -49,9 +49,12 @@
 }
 
 #avatar {
+	position: relative;
 	display: block;
 	width: 150px;
 	height: 150px;
+
+	left: calc(50% - 75px);
 
 	border-radius: 50%;
 
